# nia-member-analysis

./: .gitignore  Dockerfile  README.md  app.py  app_multilingual.py  pyproject.toml  requirements.txt  translations.py
.github/workflows/: ci.yml
configs/: settings.yaml
data/: README.md
data/processed/: features.parquet  households.parquet  recommendations.parquet
models/artifacts/: ers_cost_gradient_boosting.pkl  ers_cost_gradient_boosting_metadata.json  ers_cost_huber.pkl  ers_cost_huber_metadata.json  ers_cost_random_forest.pkl  ers_cost_random_forest_metadata.json  fsv_cmsi_random_forest.pkl  fsv_cmsi_random_forest_metadata.json  fsv_credit_card_xgboost.pkl  fsv_credit_card_xgboost_metadata.json  fsv_id_theft_random_forest.pkl  fsv_id_theft_random_forest_metadata.json  ins_client_random_forest.pkl  ins_client_random_forest_metadata.json  new_mover_random_forest.pkl  new_mover_random_forest_metadata.json  trv_globalware_random_forest.pkl  trv_globalware_random_forest_metadata.json
notebooks/: 01_data_exploration.ipynb  02_classification_results.ipynb  03_regression_results.ipynb  04_clustering_recommendations.ipynb
src/: __init__.py  config.py
src/evaluation/: __init__.py  metrics.py  plots.py
src/features/: __init__.py  preprocessing.py
src/models/: __init__.py  classifier.py  clustering.py  regressor.py
src/pipelines/: __init__.py  train.py
tests/: test_clustering.py  test_config.py  test_metrics.py  test_preprocessing.py
